<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LookARound</string>
    <string name="toast_cameraError">An error occurred with the camera</string>
    <string name="dialogLocation_Title">Enable Location</string>
    <string name="dialogLocation_Message">Your Locations Settings is set to \'Off\'.\nPlease Enable Location to use this app</string>
    <string name="dialogLocation_Positive">Location Settings</string>
    <string name="dialogLocation_Negative">Cancel</string>
    <string name="tvGpsValuesHint">Waiting for gps signal…</string>
    <string name="toast_cameraNotFound">Oops.. camera not found</string>
    <string name="dialog_permission_allow">OK</string>
    <string name="explain_permission_fine_location">Need permissions for location</string>
    <string name="explain_permission_camera">Need permission for camera</string>
    <string name="no_location_data_provided">Location provider error</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid lat lng used</string>
    <string name="no_address_found">No address found</string>
    <string name="address_found">Address found</string>
    <string name="errorePermessiCamera">Error, camera permission required</string>
    <string name="errorePermessiGPS">Error,\nlocation permissions\nrequired</string>
    <string name="default_distance">~ km</string>
    <string name="checkInternet">Check internet connection</string>
    <string name="customPlace">Received position</string>
    <string name="returnToDefault">Friend Mode\nSwitch to default</string>
    <string name="helpDialogTitle">Help</string>
    <string name="helpInterface">Interface</string>
    <string name="helpFriendMode">Friend Mode</string>
    <string name="helpCalibration">Calibration</string>
    <string name="helpMessageInterface">Click on the map to have a wider view, the points of interest are represented by colored circles.\n\nThe side bar represents the considered visual distance, reduce it in case of lack of points of interest.\nIt is shown an approximate distance and the current direction.\n\nThe approximate address of your location is shown below, in case the address is missing, the location data (latitude, longitude and altitude) are shown.\n\nPointing the smartphone to a point of interest, it will be shown a colored tag with the name, the address and the approximate distance from that point.\n\nIn the upper left you can select a filter for the points of interest.\nThe available filters (for now) are : restaurants, bars, museums and gas stations. The active filter is slightly highlighted.</string>
    <string name="helpMessageFriendMode">LookARound is able to open the positions shared by their contacts on social networks.\nOpening the application from a shared link containing a location will start the app in \"FriendMode\" showing only the shared positions as a point of interest.</string>
    <string name="helpMessageCalibrate">Sometimes it is necessary to calibrate the sensors of the device to get a realistic experience.\nIf you find abnormal behavior of the app turn the device for a few seconds according to each of the main axes as shown in the figure.</string>
</resources>
