<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/camera_preview"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/darker_gray"
    android:baselineAligned="false"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/filterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="10dp">

        <ImageButton
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/transparent"
            android:onClick="showPlacesFilters"
            android:paddingTop="10dp"
            android:src="@drawable/search" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_toRightOf="@id/search">

            <LinearLayout
                android:id="@+id/filterLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

            </LinearLayout>
        </HorizontalScrollView>

        <ImageButton
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:onClick="showHelp"
            android:paddingTop="10dp"
            android:src="@drawable/help" />

    </RelativeLayout>

    <Button
        android:id="@+id/returnToDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="start"
        android:onClick="returnToDefault"
        android:text="@string/returnToDefault"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

    </FrameLayout>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <LinearLayout
            android:id="@+id/layoutContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/tvGpsValues"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="2"
                android:shadowColor="@android:color/black"
                android:shadowRadius="0.2"
                android:text="@string/tvGpsValuesHint"
                android:textAlignment="viewStart"
                android:textColor="@color/colorTextTv" />

            <FrameLayout
                android:id="@+id/mapContainer"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="bottom|end"
                android:visibility="invisible">

            </FrameLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvErrorePermessiCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="10dp"
            android:maxWidth="110dp"
            android:shadowColor="@android:color/black"
            android:shadowRadius="0.2"
            android:text="@string/errorePermessiCamera"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorTextTv"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvBearing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="110dp"
            android:layout_marginEnd="67dp"
            android:layout_marginRight="67dp"
            android:shadowColor="@android:color/black"
            android:shadowRadius="0.2"
            android:text="???° NE"
            android:textAlignment="viewEnd"
            android:textColor="@color/colorTextTv"
            android:visibility="invisible"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="110dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="45dp"
            android:orientation="vertical">

            <com.unisa_contest.toan.look_around.VerticalSeekBar
                android:id="@+id/seekBarZoom"
                android:layout_width="30dp"
                android:layout_height="220dp"
                android:layout_gravity="end"
                android:max="5"
                android:progress="0"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:shadowColor="@android:color/black"
                android:shadowRadius="0.2"
                android:text="@string/default_distance"
                android:textAlignment="viewEnd"
                android:textColor="@color/colorTextTv"
                android:visibility="invisible" />

        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>

</FrameLayout>
